# books-project

./: .gitignore  README.md  docker-compose.yml
server/: Dockerfile  pyproject.toml
server/books/: constants.py  models.py  serializers.py  urls.py  utils.py  views.py
server/books/migrations/: 0004_genre_book_genres.py  0007_alter_book_upload.py  0009_alter_like_options.py  0010_book_subscription_type.py  0012_alter_subscription_user.py  0013_alter_book_subscription_type_and_more.py  0014_alter_book_subscription_type_alter_subscription_type.py  0015_alter_book_description.py  0016_alter_subscription_type.py  0018_alter_subscription_type.py  0019_like_liked_time.py
server/media/uploads/author_1/: testpdf.odt
server/rent/: settings.py
server/rent/books/: admin.py  constants.py  models.py  permissions.py  serializers.py  utils.py  views.py
server/rent/books/migrations/: 0001_initial.py  0002_initial.py  0003_subscription_start_date.py  0005_remove_subscription_book_subscription_type.py  0006_remove_book_text_book_description_book_upload.py  0008_like.py  0011_alter_book_author_alter_book_genres_and_more.py  0017_alter_subscription_start_date.py
server/rent/rent/: settings.py  urls.py
server/rent/users/: admin.py  models.py  serializers.py  urls.py
server/rent/users/migrations/: 0001_initial.py  0002_user_is_private.py
server/users/: constants.py  serializers.py  views.py
server/users/migrations/: 0003_alter_follow_author_alter_follow_user_and_more.py
